// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OE - Placeholder danger renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-danger"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder dark renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-dark"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder glow renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  

  
  <p
    class="placeholder-glow"
  >
    <span
      class="placeholder bg-primary"
      style="width: 70%;"
    />
  </p>
</jest>
`;

exports[`OE - Placeholder info renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-info"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder lg renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760

  
  
  


  <span
    class="placeholder placeholder-lg bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder light renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-light"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder link renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-link"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder primary renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder secondary renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-secondary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder sm renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760

  
  
  


  <span
    class="placeholder placeholder-sm bg-primary"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder success renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-success"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder warning renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  


  <span
    class="placeholder bg-warning"
    style="width: 70%;"
  />
</jest>
`;

exports[`OE - Placeholder wave renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760


  
  

  
  <p
    class="placeholder-wave"
  >
    <span
      class="placeholder bg-primary"
      style="width: 70%;"
    />
  </p>
</jest>
`;

exports[`OE - Placeholder xs renders correctly 1`] = `
<jest>
  &lt;&lt;&lt;&lt;&lt;&lt;&lt; HEAD
=======

&gt;&gt;&gt;&gt;&gt;&gt;&gt; 72a590a814eb193c247246f7b8a52246de4b8760

  
  
  


  <span
    class="placeholder placeholder-xs bg-primary"
    style="width: 70%;"
  />
</jest>
`;
